Added dependecies to project and added favicon

--- a/dronezone/src/index.css
+++ b/dronezone/src/index.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,7 +16,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+
+
+
+
+
+
+/*Starter CSS*/
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -65,4 +75,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
