--- a/dronezone/src/index.css
+++ b/dronezone/src/index.css
@@ -3,14 +3,13 @@
 
 
 :root {
-
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; 
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-primary-gray);
+  background-color: var(--color-primary-white);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,13 +23,36 @@
 @theme {
   --color-primary-yellow: #FFCC00; 
   --color-primary-blue:#2137F8;
+  --color-primary-white: #FFFFFF;
+  --color-primary-blue: #2137F8;
+  --color-primary-light-blue: #00BFFF;
+  --color-primary-gray: #374151; 
+  --color-primary-light-gray:#9CA3AF;
+
+  
 
 
   /* Fonts & text related */
   --font-primary: 'Jersey 20', sans-serif;
+ 
 
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+@apply 
 
 /*Starter CSS*/
 /* a {
@@ -42,13 +64,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
