--- a/dronezone/src/components/logoAnimation.css
+++ b/dronezone/src/components/logoAnimation.css
@@ -3,6 +3,7 @@
   display: inline-block;
   text-align: center;
   min-width: 150px; /* Ensure minimum width */
+  left:150px;
 }
 
 /* Responsive adjustments */
