--- a/dronezone/src/components/logoAnimation.css
+++ b/dronezone/src/components/logoAnimation.css
@@ -30,10 +30,14 @@
     height: 10px;
   }
 }
-.shadow{
+
+
+/* .shadow::before {
   display: none;
-}
-.shadow:hover {
+  
+} */
+.shadow{
+  display: block;
   position: absolute;
   top:100%;
   left: 10%;
@@ -65,14 +69,15 @@
   0% {
     transform: translateX(-50%) scaleX(1);
     opacity: 0.6;
-  }
+    }
   50% {
     transform: translateX(-50%) scaleX(1.5);
     opacity: 0.4;
-  }
+     }
   100% {
     transform: translateX(-50%) scaleX(1);
     opacity: 0.6;
+    
   }
 }
 
