--- a/dronezone/src/components/logoAnimation.css
+++ b/dronezone/src/components/logoAnimation.css
@@ -105,3 +105,20 @@
     transform: rotate(360deg);
   }
 }
+
+.animate-bounce-up-and-down-for-login {
+  animation: bounce 2s infinite ease-in-out;
+  transition: transform 0.5s cubic-bezier(0.4,0,0.2,1);
+
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
